finalização da responsividade e correção de animações

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div data-aos="zoom-in"  class="color black"></div>
                 <div  data-aos="zoom-in" class="color gold"></div>
                 </div>
-            <div  data-aos="fade-left" class="img-container z-index3">
+            <div  data-aos="fade-down" class="img-container z-index3">
                 <img src="/img/unha02.jpg" alt="unhas">
             </div>
         </section>
@@ -129,7 +129,7 @@
         <!-- Esmaltes -->
         <section id="main-content" class="esmalte-container">
             <div class="esmalte-content">
-                <h1 id="title"data-aos="fade-left">Com uma variedade de <span style="color: #95596e;">cores</span> e esmaltes de alta <span style="color: #95596e;"> qualidade</span>!</h1>
+                <h1 id="title"data-aos="fade-zoom">Com uma variedade de <span style="color: #95596e;">cores</span> e esmaltes de alta <span style="color: #95596e;"> qualidade</span>!</h1>
                 <div class="img-esmalte-container">
                 <img data-aos="zoom-in" src="/img/esmalte_pink.png" alt="Esmalte" id="product-image">
                 </div>
@@ -180,7 +180,7 @@
             <div class="about-description">
                 <p data-aos="fade-right">-Olá meninas, meu nome é Maria Clara e sou Dona do Studio "Unha Esmalte Cor", estou aqui para elevar a sua autoestima com harmonia nas unhas, estou ansiosa te esperando!</p>
             </div>
-            <div data-aos="fade-left" class="about-content">
+            <div data-aos="fade-up" class="about-content">
                 <img src="/img/maria.png" alt="">
                 <p>Especialista em unhas naturais</p>
                 <a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TcwrrI0yDNg9BJJTswtyFfIyQSRBYmlOZnFJYkAp8kK9g&q=campo+limpo+paulista&oq=campo+li&gs_lcrp=EgZjaHJvbWUqDQgCEC4YgwEYsQMYgAQyBggAEEUYOTIKCAEQLhixAxiABDINCAIQLhiDARixAxiABDINCAMQLhivARjHARiABDIHCAQQABiABDINCAUQLhivARjHARiABDINCAYQLhivARjHARiABDIHCAcQABiABDINCAgQLhivARjHARiABNIBCTQ0MjBqMGoxNagCCLACAQ&sourceid=chrome&ie=UTF-8" target="_blank"><i class="fa fa-map-marker" aria-hidden="true">Campo Limpo Paulista</i></a>
