--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             <div  data-aos="zoom-in" class="color ligth"></div>
             </div>
             <div  data-aos="fade-up" class="descritpion">
-                <h1>"Liberte sua <span> confiança </span> com unhas que refletem a <span> beleza </span> que está em você!"</h1>
+                <h1  class="h1-nail">"Liberte sua <span> confiança </span> com unhas que refletem a <span> beleza </span> que está em você!"</h1>
             </div>
         </section>
 
         <section id="destaques" class="destaque-container reverse">
             <div  data-aos="fade-up" class="descritpion-lemon z-index1">
-                <h1>"<span class="spanlemon"> Unhas </span> bem cuidadas são seu <span>Cartão de Visita </span>!"</h1>
+                <h1 class="h1-nail" >"<span class="spanlemon"> Unhas </span> bem cuidadas são seu <span>Cartão de Visita </span>!"</h1>
             </div>
             <div class="colors z-index2" >
                 <div  data-aos="zoom-in" class="color lemon"></div>
@@ -121,7 +121,7 @@
                 <div  data-aos="zoom-in" class="color purplepink"></div>
             </div>
             <div  data-aos="fade-up" class="descritpion-purplepink">
-                <h1>"Transforme suas unhas em <span id="spanpurple-shine" > obras de arte </span>  e deixe sua beleza brilhar em cada gesto."
+                <h1  class="h1-nail">"Transforme suas unhas em <span id="spanpurple-shine" > obras de arte </span>  e deixe sua beleza brilhar em cada gesto."
                 </h1>
             </div>
 
