--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- sobre -->
         <section  id="sobre" class="about-container">
             <div class="about-description">
-                <p data-aos="fade-right">-Olá meninas, meu nome é Maria Clara e sou Dona do Studio "Unha Esmalte Cor", estou aqui para elevar a sua autoestima com harmonia nas unhas, estou ansiosa te esperando!</p>
+                <p data-aos="fade-right">-Olá meninas, meu nome é Maria Clara e sou profissional do Studio "Unha Esmalte Cor", estou aqui para elevar a sua autoestima com harmonia nas unhas, estou ansiosa te esperando!</p>
             </div>
             <div data-aos="fade-up" class="about-content">
                 <img src="/img/maria.png" alt="">
