att da responsividade

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                 <p data-aos="fade-up">Sábado</p>
             </div>
             <div class="contact-content">
-               <a data-aos="fade-zoom-in" href="https://www.instagram.com/unha_esmalte_cor/" target="_blank"><i class="fa-brands fa-instagram fa-lg fa-fw" aria-hidden="true"></i></a>
-               <a data-aos="fade-zoom-in" href="https://api.whatsapp.com/send/?phone=5511941388556&text=Ol%C3%A1%2C+gostaria+de+agendar+um+hor%C3%A1rio+%EF%BF%BD&type=phone_number&app_absent=0" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+               <a data-aos="fade-zoom" href="https://www.instagram.com/unha_esmalte_cor/" target="_blank"><i class="fa-brands fa-instagram fa-lg fa-fw" aria-hidden="true"></i></a>
+               <a data-aos="fade-zoom" href="https://api.whatsapp.com/send/?phone=5511941388556&text=Ol%C3%A1%2C+gostaria+de+agendar+um+hor%C3%A1rio+%EF%BF%BD&type=phone_number&app_absent=0" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <p data-aos="fade-zoom">A partir das 8 horas!</p>
         </section>
